fix(html): show overflowing content in print view

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -414,6 +414,12 @@ tr:hover .btn-edit {
 /* || media queries */
 /*  */
 
+@media print {
+  #content {
+    height: auto;
+  }
+}
+
 @media (max-width: 992px) {
   #main {
     padding: 0.5em;
